REFACTOR: to not overwrite repo-sle-update.repo from MicroOS, add the one from Leap as repo-leap-sle-update.repo; adjust variables accordingly

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,7 +15,7 @@ repo_debug_non_oss_enabled: '0'
 repo_debug_update_enabled: '0'
 repo_debug_update_non_oss_enabled: '0'
 
-repo_sle_update_enabled: '1'
+repo_leap_sle_update_enabled: '1'
 repo_sle_debug_update_enabled: '0'
 
 repo_source_enabled: '0'
