--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -34,7 +34,7 @@
     - 'repo-non-oss.repo'
     - 'repo-oss.repo'
     - 'repo-sle-debug-update.repo'
-    - 'repo-sle-update.repo'
+    - 'repo-leap-sle-update.repo'
     - 'repo-update-non-oss.repo'
     - 'repo-update.repo'
 
